--- a/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
@@ -12,7 +12,14 @@
     <form asp-action="AddNewVehicle" method="post" class="form-horizontal">
 
         <div class="form-group">
-            <label asp-for="Brand" class="control-label col-sm-2">Bilmärke:</label>
+            <label asp-for="RegNr" class="control-label col-sm-2">Registreringsnummer:</label>
+            <div class="col-sm-10">
+                <input asp-for="RegNr" class="form-control" />
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label asp-for="Brand" class="control-label col-sm-2">Märke:</label>
             <div class="col-sm-10">
                 <input asp-for="Brand" class="form-control" />
             </div>
@@ -26,20 +33,12 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="RegNr" class="control-label col-sm-2">Registreringsnummer:</label>
-            <div class="col-sm-10">
-                <input asp-for="RegNr" class="form-control" />
-            </div>
-        </div>
-
-        <div class="form-group">
             <label asp-for="ModelDescription" class="control-label col-sm-2">Modellbeskrivning:</label>
             <div class="col-sm-10">
-                <input asp-for="ModelDescription" class="form-control" />
+                <textarea asp-for="ModelDescription" class="form-control"></textarea>
             </div>
         </div>
 
-        @* TODO: drop-down list with years *@
         <div class="form-group">
             <label asp-for="Year" class="control-label col-sm-2">Årsmodell:</label>
             <div class="col-sm-10">
@@ -51,23 +50,6 @@
                 </select>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
         <div class="form-group">
             <label asp-for="Kilometer" class="control-label col-sm-2">Kilometer:</label>
@@ -84,16 +66,34 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Body">Karosstyp:</label>
-            <div class="col-sm-10"></div>
-            <input asp-for="Body" class="form-control" />
+            <label asp-for="Body" class="control-label col-sm-2">Karosstyp:</label>
+            <div class="col-sm-10">
+                <select asp-for="Body" class="form-control" id="">
+                    @foreach (var type in ViewBag.bodyTypes)
+                    {
+                        <option>@type</option>
+                    }
+                </select>
+            </div>
         </div>
 
+
+
+
+
+
+
+
+
+
+
         <div class="form-group">
-            <label asp-for="Color">Färg:</label>
-            <div class="col-sm-10"></div>
-            <input asp-for="Color" class="form-control" />
+            <label asp-for="Color" class="control-label col-sm-2">Färg:</label>
+            <div class="col-sm-10">
+                <input asp-for="Color" class="form-control" />
+            </div>
         </div>
+
         <div class="form-group">
             <label asp-for="Gearbox">Växellådstyp:</label>
             <div class="col-sm-10"></div>
