--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -27,6 +27,28 @@
         </div>
     </form>
 
+    @{
+        var newsApiClient = new NewsApiClient("f9e4c9f7922b44828a235c984e930a3a");
+        var articleResponse = newsApiClient.GetEverything(new EverythingRequest
+        {
+            Q = "Car",
+            SortBy = SortBys.Popularity,
+            Language = Languages.EN,
+            From = new DateTime(2018, 8, 20)
+        });
+        if (articleResponse.Status == Statuses.Ok)
+        {
+            app.Run(async (context) =>
+            {
+                foreach (var article in articleResponse.Articles)
+                {
+                    await context.Response.WriteAsync(article.Title);
+                }
+
+            });
+        }
+    }
+
 
 </body>
 </html>
