--- a/BolindersBil.Web/Views/_ViewImports.cshtml
+++ b/BolindersBil.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using BolindersBil.Models
+@using NewsAPI;
+@using NewsAPI.Models;
+@using NewsAPI.Constants;
+@using System;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
