--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -13,37 +13,34 @@
     
 
     @{
-                    var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
-                    var articleResponse = newsApiClient.GetEverything(new EverythingRequest
-                    {
-                        Q = "Car",
-                        SortBy = SortBys.Popularity,
-                        Language = Languages.EN,
-                        Sources = { "the-new-york-times" }
+        var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
+        var articleResponse = newsApiClient.GetEverything(new EverythingRequest
+        {
+            Q = "Car",
+            SortBy = SortBys.Popularity,
+            Language = Languages.EN,
+            Sources = { "the-new-york-times" }
 
-                    });
-                    var theResults = articleResponse.TotalResults;
-                    theResults = 5;
-                    
-                    if (articleResponse.Status == Statuses.Ok)
-                    {
-                        foreach (var article in articleResponse.Articles)
-                        {
+        });
+        
 
-                            
-
-                    @*<div class="card-group" style="width: 20rem;">
+        if (articleResponse.Status == Statuses.Ok)
+        {
+            foreach (var article in articleResponse.Articles.Take(3))
+            {
+                
+                    <div class="card-group" style="width: 20rem;">
                         <div class="card">
                             <div class="card-body">
                                 <h5 class="card-title">
                                     @article.Title
                                 </h5>
                                 <i class="card-text">
-                                    @article.Description
+                                    @article.Description.Substring(0,article.Description.Length > 40 ? 40 : article.Description.Length)
                                 </i>
                             </div>
                         </div>
-                    </div>*@
+                    </div>
 
             }
 
