--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -1,27 +1,28 @@
 ﻿@*<h1>TODO: Navbar!!!</h1>*@
 
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
+        <div class="text-secondary">BolindersBil</div>
+    </div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="#/Home">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/Vehicles">Vehicles</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#/Contact">Contact</a>
+            </li>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">         
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown
-                </a>
-                @*<div class="@(ViewBag.Vehicle == null ? "active" :"")">
-                    <a asp-action="List"
-                       asp-controller="Vehicle"
-                       asp-route-carsforsale"">
-                        Alla bilar
-                       </a>
-                   
-                </div>*@
-            </li>         
         </ul>
     </div>
 </nav>
+
+
+   
+
+
+
