--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -1,4 +1,11 @@
-﻿
+﻿@{ var imagePath = "";
+    if (Request["Logo] != null)
+    {
+        imagePath = @"Logo\" + Request["photoChoice"];
+    }
+}
+
+
 <!DOCTYPE html>
 
 <html>
@@ -10,6 +17,18 @@
 
     <p>In the Index View</p>
 
+
+    <img src="~/Logo/BMW-logo-2000-2048x2048.png" alt="Sample Photo" />
+    <img src="~/Logo/Nissan-logo-2013-1440x900.png" />
+    <img src="~/Logo/Toyota-logo-1989-2560x1440.png" />
+    <img src="~/Logo/Volvo-logo-2014-1920x1080.png" />
+    '
+    I want to see:
+    <select name="Logo">
+        <option value="">Photo 1</option>
+        <option value="Photo2.jpg">Photo 2</option>
+        <option value="Photo3.jpg">Photo 3</option>
+    </select>
 
 </body>
 </html>
