Added a little CRUD logics for AddNewVehicle.

--- a/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
@@ -173,5 +173,10 @@
                 <input asp-for="VehicleAttribute" class="form-control" />
             </div>
         </div>
+
+        <div class="form-group">
+            <button class="btn btn-primary" type="submit">Add Vehicle</button>
+        </div>
+
     </form>
 </div>
