--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -9,48 +9,57 @@
 <body>
 
     <p>In the Index View</p>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="offset-9">
 
-    
+                @{
+                    var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
+                    var articleResponse = newsApiClient.GetEverything(new EverythingRequest
+                    {
+                        Q = "Car",
+                        SortBy = SortBys.PublishedAt,
+                        Language = Languages.EN,
+                        Sources = { "the-new-york-times" }
 
-    @{
-        var newsApiClient = new NewsApiClient("8a9c9b8aa9bb4c01ab3ea332452176af");
-        var articleResponse = newsApiClient.GetEverything(new EverythingRequest
-        {
-            Q = "Car",
-            SortBy = SortBys.Popularity,
-            Language = Languages.EN,
-            Sources = { "the-new-york-times" }
+                    });
 
-        });
-        
+                    if (articleResponse.Status == Statuses.Ok)
+                    {
+                        foreach (var article in articleResponse.Articles.Take(3))
+                        {
 
-        if (articleResponse.Status == Statuses.Ok)
-        {
-            foreach (var article in articleResponse.Articles.Take(3))
-            {
-                
-                    <div class="card-group" style="width: 20rem;">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="card-title">
-                                    @article.Title
-                                </h5>
-                                <i class="card-text">
-                                    @article.Description.Substring(0,article.Description.Length > 40 ? 40 : article.Description.Length)
-                                </i>
+                            <div class="card-group col-9" style="margin: 1em;">
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h5 class="card-title">
+                                            @article.Title
+                                        </h5>
+                                    </div>
+                                    <div class="card-body">
+
+                                        <i class="card-text">
+                                            @SubStringCut.ShortenString(article.Description, 40)<a>... </a><u><a target="_blank" href="@article.Url">Läs mer</a></u>
+                                        </i>
+
+                                    </div>
+                                    <div class="card-footer">
+                                        @article.PublishedAt?.ToString("dd/MM/yyyy")
+                                    </div>
+                                </div>
                             </div>
-                        </div>
-                    </div>
 
-            }
+                        }
 
-        }
-        else
-        {
-            <strong>Statusen är inte OK</strong>
-        }
-    }
-
+                    }
+                    else
+                    {
+                        <strong>Statusen är inte OK</strong>
+                    }
+                }
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
