--- a/BolindersBil.Web/Views/_ViewImports.cshtml
+++ b/BolindersBil.Web/Views/_ViewImports.cshtml
@@ -3,5 +3,6 @@
 @using NewsAPI.Models;
 @using NewsAPI.Constants;
 @using System;
+@using BolindersBil.Web.ExtenstionMethods;
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
