--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -11,6 +11,27 @@
     <p>In the Index View</p>
     <div class="container-fluid">
         <div class="row">
+
+            <div id="SearchBar">
+                <div class="input-group mb-3" style="margin: 2em">
+                    <div class="input-group-prepend">
+                        <input type="text" class="form-control" aria-label="Text input with checkbox">
+                    </div>
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <input type="checkbox" aria-label="Checkbox for following text input">
+                        </div>
+                    </div>
+                    <div class="input-group-prepend">
+                        <div class="input-group-text">
+                            <input type="checkbox" aria-label="Checkbox for following text input">
+                        </div>
+                    </div>
+                    <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
+                </div>
+            </div>
+
+            @*Newsfeed*@
             <div class="offset-9">
 
                 @{
