--- a/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
@@ -128,9 +128,9 @@
         </div>
 
         <div class="form-group">
-            <label asp-for="Offices" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
+            <label asp-for="Office" class="control-label col-sm-2"><strong>Anläggning:</strong></label>
             <div class="col-sm-10">
-                <select asp-for="Offices" class="form-control" id="">
+                <select asp-for="Office" class="form-control" id="">
                     <option selected>Välj</option>
                     @foreach (var office in ViewBag.offices)
                     {
