--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<Vehicle>
+
 <!DOCTYPE html>
 
 <html>
@@ -12,24 +13,33 @@
     <div class="container-fluid">
         <div class="row">
 
-            <div id="SearchBar">
-                <div class="input-group mb-3" style="margin: 2em">
-                    <div class="input-group-prepend">
-                        <input type="text" class="form-control" aria-label="Text input with checkbox">
-                    </div>
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">
-                            <input type="checkbox" aria-label="Checkbox for following text input">
+            @foreach (var v in Model)
+            {
+                <p>@v.RegNr</p>
+            }
+
+
+            @*Search form*@
+            @*<form asp-action="GetVehicles" method="get">
+                <div id="SearchBar">
+                    <div class="input-group mb-3" style="margin: 2em">
+                        <div class="input-group-prepend">
+                            <input type="text" class="form-control" placeholder="T.ex. Volvo (C30)">
                         </div>
-                    </div>
-                    <div class="input-group-prepend">
-                        <div class="input-group-text">
-                            <input type="checkbox" aria-label="Checkbox for following text input">
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="checkbox" aria-label="Checkbox for following text input">
+                            </div>
                         </div>
+                        <div class="input-group-prepend">
+                            <div class="input-group-text">
+                                <input type="checkbox" aria-label="Checkbox for following text input">
+                            </div>
+                        </div>
+                        <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
                     </div>
-                    <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
                 </div>
-            </div>
+            </form>*@
 
             @*Newsfeed*@
             <div class="offset-9">
