--- a/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
@@ -9,7 +9,7 @@
 <hr />
 
 <div>
-    <form asp-action="AddNewVehicle" method="post" class="form-horizontal">
+    <form asp-action="AddNewVehicle" method="post" enctype="multipart/form-data" class="form-horizontal">
 
         <div class="form-group">
             <label asp-for="RegNr" class="control-label col-sm-2"><strong>Registreringsnummer:</strong></label>
@@ -144,13 +144,10 @@
         <div class="form-group">
             <label asp-for="Picture" class="control-label col-sm-2"><strong>Bilder:</strong></label>
             <div class="col-sm-10">
-                @*<div class="custom-file">
-            <input asp-for="Picture" type="file" class="custom-file-input" id="customFile">
-            <label class="custom-file-label control-label col-sm-4" for="customFile">Välj fil</label>
-        </div>*@
-
-                <input asp-for="Picture" class="form-control" />
-
+                <div>
+                    <input asp-for="Picture" type="file" id="files" class="custom-file-input" multiple>
+                    <label class="custom-file-label col-sm-4">Välj fil</label>
+                </div>
             </div>
         </div>
 
