--- a/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
+++ b/BolindersBil.Web/Views/Admin/AddNewVehicle.cshtml
@@ -159,7 +159,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        @*<div class="form-group">
             <label asp-for="AddedDate" class="control-label col-sm-2"><strong>Inlagd datum:</strong></label>
             <div class="col-sm-10">
                 <input asp-for="AddedDate" class="form-control" />
@@ -171,7 +171,7 @@
             <div class="col-sm-10">
                 <input asp-for="UpdatedDate" class="form-control" />
             </div>
-        </div>
+        </div>*@
 
         <div class="form-group">
             <label asp-for="VehicleAttribute" class="control-label col-sm-2"><strong>Pipe-separerad attributlista:</strong></label>
