Edit style sheet

--- a/BolindersBil.Web/Views/Start/Index.cshtml
+++ b/BolindersBil.Web/Views/Start/Index.cshtml
@@ -7,6 +7,16 @@
     <title>Index</title>
 </head>
 <body>
+    <style>
+     
+        .grid-item {
+            background-color: rgba(255, 255, 255, 0.8);
+            border: 1px solid rgba(0, 0, 0, 0.8);
+            padding: 20px;
+            font-size: 30px;
+            text-align: center;
+        }
+    </style>
 
     <p>In the Index View</p>
     <div class="container-fluid">
@@ -30,6 +40,21 @@
                     <input type="search" class="btn btn-light" value="Sök" style="margin: 2em" />
                 </div>
             </div>
+
+            <div class="grid-item">
+
+                <img src="~/Logo/BMW-logo-2000-2048x2048.png" style="width:75px;" />
+                <img src="~/Logo/Nissan-logo-2013-1440x900.png" style="width:170px;" />
+                <img src="~/Logo/Toyota-logo-1989-2560x1440.png" style="width:170px" />
+                <img src="~/Logo/Volvo-logo-2014-1920x1080.png" style="width: 150px;" />
+                <img src="~/Logo/Mini-logo-2001-1920x1080.png" style="width:150px;" />
+                <img src="~/Logo/Nissan-logo-2013-1440x900.png" style="width:150px;" />
+                <img src="~/Logo/Porsche-logo-2008-1920x1080.png" style="width:150px;" alt="Porsche" />
+                <img src="~/Logo/Renault-logo-2015-2048x2048.png" style="width:100px;" alt="Renault" />
+                <img src="~/Logo/Saab-logo-2013-2000x450.png" style="width:100px;" />
+
+            </div>
+
 
             @*Newsfeed*@
             <div class="offset-9">
