--- a/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
+++ b/BolindersBil.Web/Views/Shared/NavbarPartialView.cshtml
@@ -8,13 +8,13 @@
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="#/Home">Home</a>
+                <a class="nav-link" href="/Home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#/Vehicles">Vehicles</a>
+                <a class="nav-link" href="/Vehicles">Vehicles</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#/Contact">Contact</a>
+                <a class="nav-link" href="/Contact">Contact</a>
             </li>
 
         </ul>
