All vehicles now listed on the admin/admin-page, buttons are up and the checkboxes are there (they also pick up the value=@v.Id from the database).

--- a/BolindersBil.Web/Views/Admin/Admin.cshtml
+++ b/BolindersBil.Web/Views/Admin/Admin.cshtml
@@ -1,8 +1,4 @@
-<<<<<<< HEAD
-﻿@model Vehicle
-=======
 ﻿@model IEnumerable<Vehicle>
->>>>>>> 3f6c20b41eb390dd77d61f40f71e7e929e25724b
 
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -16,64 +12,34 @@
     <title>Admin</title>
 </head>
 <body>
-    <h1 style="text-align:center; margin-top:10px">Welcome Admin!</h1>
+    <h1 style="text-align:center; margin-top:20px; margin-bottom:100px">Welcome Admin!</h1>
     <!-- Denna information finns i PPT 5, sida 81 och framåt: -->
-
     <!-- The editing section on the top of the page: -->
-    <div class="float-sm-right" style="margin-right:10px; margin-top:80px">
-    <button class="btn btn-success" type="submit">New</button>
-    <button class=" btn btn-warning" type="submit">Update</button>
-    <button class="btn btn-danger" type="submit">Delete</button>
-    </div>
 
-    <!-- The layout for all the vehicles presented on the Admin-page: -->
-    <div class="panel panel-default" style="margin:10px">
-        <div class="panel-body" style="margin-top: 200px; border:solid 1px">
-            <div class="row" style="border:dotted; margin:10px">
-                <div class="col-md-4" style="margin:10px">
-                    <h2>Registreringsnummer@*@Model.RegNr*@</h2>
-                    <p>Lorem ipsum om bilen...@*@Model.VehicleAttribute*@</p>
-                    <span class="badge-success price-label">@*@($"Pris: { Model.Price:C2}")*@1.200.000kr</span>
-                </div>
-                <div class="col-md-8">
-                    <img src="~/Logo/BMW-logo-2000-2048x2048.png" class="rounded float-right; img-thumbnail" />
-                </div>
-            </div>
-            <div class="row" style="border:dotted; margin:10px">
-                <div class="col-md-4" style="margin:10px">
-                    <h2>Registreringsnummer@*@Model.RegNr*@</h2>
-                    <p>Lorem ipsum om bilen...@*@Model.VehicleAttribute*@</p>
-                    <span class="badge-success price-label">@*@($"Pris: { Model.Price:C2}")*@1.200.000kr</span>
-                </div>
-                <div class="col-md-8">
-                    <img src="@*@Model.Picture*@" class="pull-right" />
-                </div>
-            </div>
-            <div class="row" style="border:dotted; margin:10px">
-                <div class="col-md-4" style="margin:10px">
-                    <h2>Registreringsnummer@*@Model.RegNr*@</h2>
-                    <p>Lorem ipsum om bilen...@*@Model.VehicleAttribute*@</p>
-                    <span class="badge-success price-label">@*@($"Pris: { Model.Price:C2}")*@1.200.000kr</span>
-                </div>
-                <div class="col-md-8">
-                    <img src="@*@Model.Picture*@" class="pull-right" />
-                </div>
-            </div>
+    <div class="container">
+        <div class="float-sm-right" style="margin-bottom:10px">
+            <button class="btn btn-success" type="submit">New</button>
+            <button class=" btn btn-warning" type="submit">Update</button>
+            <button class="btn btn-danger" type="submit">Delete</button>
         </div>
+
+    @foreach (var v in Model)
+    {
+        <!-- The layout for all the vehicles presented on the Admin-page: -->
+        <table class="table table-bordered table-striped">
+            <tr>
+               <td><input type="checkbox" value="@v.Id" /> @v.RegNr</td>
+            </tr>
+        </table>
+    }
     </div>
 
-    <div class="pull-right">
-        @if (User.Identity.IsAuthenticated)
-        {
-            <a asp-controller="Logout" asp-action="Logout" class="btn btn-sm btn-danger">Logga ut</a>
-        }
-    </div>
-
-
-    @foreach(var v in Model)
-        {
-            <p>@v.RegNr</p>
-        }
-
+        <!-- Sign out: -->
+        <div class="pull-right">
+            @if (User.Identity.IsAuthenticated)
+            {
+                <a asp-controller="Logout" asp-action="Logout" class="btn btn-sm btn-danger">Logga ut</a>
+            }
+        </div>
 </body>
 </html>
