--- a/BolindersBil.Web/Views/Admin/Admin.cshtml
+++ b/BolindersBil.Web/Views/Admin/Admin.cshtml
@@ -18,9 +18,9 @@
 
     <div class="container">
         <div class="float-sm-right" style="margin-bottom:10px">
-            <button class="btn btn-success" type="submit">New</button>
-            <button class=" btn btn-warning" type="submit">Update</button>
-            <button class="btn btn-danger" type="submit">Delete</button>
+            <button class="btn btn-success" type="submit" name="newVehicle" id="newVehicle">New</button>
+            <button class=" btn btn-warning" type="submit" name="updateVehcle" disabled="disabled" id="updateVehcle">Update</button>
+            <button class="btn btn-danger" type="submit" name="deleteVehicle" disabled="disabled" id="deleteVehicle">Delete</button>
         </div>
 
     @foreach (var v in Model)
@@ -28,18 +28,39 @@
         <!-- The layout for all the vehicles presented on the Admin-page: -->
         <table class="table table-bordered table-striped">
             <tr>
-               <td><input type="checkbox" value="@v.Id" /> @v.RegNr</td>
+                <td><input type="checkbox" id="checkedBox" value="@v.Id" /> @v.RegNr</td>
             </tr>
         </table>
     }
     </div>
 
-        <!-- Sign out: -->
-        <div class="pull-right">
-            @if (User.Identity.IsAuthenticated)
-            {
-                <a asp-controller="Logout" asp-action="Logout" class="btn btn-sm btn-danger">Logga ut</a>
+    <!-- Sign out: -->
+    <div class="pull-right">
+        @if (User.Identity.IsAuthenticated)
+        {
+            <a asp-controller="Logout" asp-action="Logout" class="btn btn-sm btn-danger">Logga ut</a>
+        }
+    </div>
+
+    <!-- Enable/Disable the buttons: -->
+    <script>
+        var boxChecker = document.getElementById('checkedBox');
+        var newButton = document.getElementById('newVehicle');
+        var updateButton = document.getElementById('updateVehicle');
+        var deleteButton = document.getElementById('deleteVehicle');
+
+        checkedBox.onchange = function () {
+            if (this.checked) {
+                updateButton.disabled = false;
+                deleteButton.disabled = false;
+                newButton.disabled = true;
+            } else {
+                updateButton.disabled = true;
+                deleteButton.disabled = true;
+                newButton.disabled = false;
             }
-        </div>
+        };
+
+    </script>
 </body>
 </html>
