Added Lazy-Loading Proxies NuGetPackage.

--- a/BolindersBil.Web/Views/Admin/Admin.cshtml
+++ b/BolindersBil.Web/Views/Admin/Admin.cshtml
@@ -18,20 +18,24 @@
 
     <div class="container">
         <div class="float-sm-right" style="margin-bottom:10px">
-            <button class="btn btn-success" type="submit" name="newVehicle" id="newVehicle">New</button>
-            <button class=" btn btn-warning" type="submit" name="updateVehcle" disabled="disabled" id="updateVehcle">Update</button>
-            <button class="btn btn-danger" type="submit" name="deleteVehicle" disabled="disabled" id="deleteVehicle">Delete</button>
+
+            <a asp-controller="Admin" asp-action="AddNewVehicle" class="btn btn-success" name="newVehicle" id="newVehicle">New</a>
+
+            <a asp-controller="Admin" asp-action="AddNewVehicle" class="btn btn-warning" name="updateVehicle" @*disabled="disabled"*@ id="updateVehcle">Update</a>
+
+            <button class="btn btn-danger" type="submit" name="deleteVehicle" @*disabled="disabled"*@ id="deleteVehicle">Delete</button>
+
         </div>
 
-    @foreach (var v in Model)
-    {
-        <!-- The layout for all the vehicles presented on the Admin-page: -->
-        <table class="table table-bordered table-striped">
-            <tr>
-                <td><input type="checkbox" id="checkedBox" value="@v.Id" /> @v.RegNr</td>
-            </tr>
-        </table>
-    }
+        @foreach (var v in Model)
+        {
+            <!-- The layout for all the vehicles presented on the Admin-page: -->
+            <table class="table table-bordered table-striped">
+                <tr>
+                    <td value="@v.Id"><input type="checkbox" id="checkedBox" value="@v.Id" /> @v.RegNr</td>
+                </tr>
+            </table>
+        }
     </div>
 
     <!-- Sign out: -->
