--- a/BolindersBil.Web/Views/Account/Index.cshtml
+++ b/BolindersBil.Web/Views/Account/Index.cshtml
@@ -1,21 +1,12 @@
-﻿@model AdminViewModel
+﻿@model LoginViewModel
 
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }   
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Login</title>
-</head>
-<body>
     <!-- Login-form: -->
     <!-- ARNEL: Du behöver gå genom nedan punkter gällande asp- för att POST mot databasen ska fungera korrekt: -->
     <div class="container mx-auto" style="width: 330px; margin-top: 50px">
-        <form asp-action="Login" asp-controller="Admin" method="post" style="max-width: 330px;">
+        <form asp-action="Login" asp-controller="Account" method="post" style="max-width: 330px;">
             <h2 class="form-login-heading" style="text-align: center; margin: 10px">Please sign in</h2>
             <label asp-for="UserName" class="sr-only">Email address</label>
             <input asp-for="UserName" id="inputUserName" class="form-control" placeholder="Email address" required autofocus style="margin:10px" />
@@ -26,5 +17,3 @@
             <button class="btn btn-lg btn-primary btn-block" type="submit" style="margin:10px">Sign in</button>
         </form>
     </div>
-</body>
-</html>
