--- a/BolindersBil.Web/Views/Contact/Index.cshtml
+++ b/BolindersBil.Web/Views/Contact/Index.cshtml
@@ -9,7 +9,7 @@
 <body>
     <h2>In the contact view!</h2>
     <div class="container">
-        <div class="row">
+        <div class="row" style="margin-bottom: 2em">
 
             <div class="card-deck">
                 <div class="card">
@@ -45,13 +45,24 @@
 
         </div>
 
-        @*GoogleMaps API*@
         <div class="row">
+            @*GoogleMaps API*@
             <div class="col-5">
                 <div id="Map" style="height: 400px; width: 100%">
-
+                    
                 </div>
             </div>
+            
+            <div class=" offset-1 col-5">
+                <form name="mail">
+                    <label>Din E-mail</label>
+                    <input type="email" />
+                    <label>Vad vill du skriva?</label>
+                    <textarea></textarea>
+                    <input type="submit" />
+                </form>
+            </div>
+
         </div>
 
     </div>
