--- a/BolindersBil.Web/Views/Account/Admin.cshtml
+++ b/BolindersBil.Web/Views/Account/Admin.cshtml
@@ -3,16 +3,16 @@
 @{
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-    <h1 style="text-align:center; margin-top:20px; margin-bottom:100px">Welcome Admin!</h1>
-    <!-- Denna information finns i PPT 5, sida 81 och framåt: -->
-    <!-- The editing section on the top of the page: -->
+<h1 style="text-align:center; margin-top:20px; margin-bottom:100px">Welcome Admin!</h1>
+<!-- Denna information finns i PPT 5, sida 81 och framåt: -->
+<!-- The editing section on the top of the page: -->
 
-    <div class="container">
-        <div class="float-sm-right" style="margin-bottom:10px">
-            <button class="btn btn-success" type="submit" name="newVehicle" id="newVehicle">New</button>
-            <button class=" btn btn-warning" type="submit" name="updateVehcle" disabled="disabled" id="updateVehcle">Update</button>
-            <button class="btn btn-danger" type="submit" name="deleteVehicle" disabled="disabled" id="deleteVehicle">Delete</button>
-        </div>
+<div class="container">
+    <div class="float-sm-right" style="margin-bottom:10px">
+        <button class="btn btn-success" type="submit" name="newVehicle" id="newVehicle">New</button>
+        <button class=" btn btn-warning" type="submit" name="updateVehcle" disabled="disabled" id="updateVehcle">Update</button>
+        <button class="btn btn-danger" type="submit" name="deleteVehicle" disabled="disabled" id="deleteVehicle">Delete</button>
+    </div>
 
     @foreach (var v in Model)
     {
@@ -23,24 +23,37 @@
             </tr>
         </table>
     }
-    </div>
+</div>
 
-    <!-- Enable/Disable the buttons: -->
-    <script>
-            var boxChecker = document.getElementById('checkedBox');
-            var newVehicle = document.getElementById('newVehicle');
-            var updateVehicle = document.getElementById('updateVehicle');
-            var deleteVehicle = document.getElementById('deleteVehicle');
-
-        boxChecker.onchange = function () {
-            if (this.checked) {
-                    updateVehicle.disabled = false;
-                    deleteVehicle.disabled = false;
-                    newButton.disabled = true;
-                } else {
-                    updateVehicle.disabled = true;
-                    deleteVehicle.disabled = true;
-                    newButton.disabled = false;
+<div class="container" style="margin-bottom:10px">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="float-sm-right">
+                @if (User.Identity.IsAuthenticated)
+                {
+                    <a asp-controller="Account" asp-action="Logout" class="btn btn-danger">Logga ut</a>
                 }
-            };
-    </script>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Enable/Disable the buttons: -->
+<script>
+    var boxChecker = document.getElementById('checkedBox');
+    var newVehicle = document.getElementById('newVehicle');
+    var updateVehicle = document.getElementById('updateVehicle');
+    var deleteVehicle = document.getElementById('deleteVehicle');
+
+    boxChecker.onchange = function () {
+        if (this.checked) {
+            updateVehicle.disabled = false;
+            deleteVehicle.disabled = false;
+            newButton.disabled = true;
+        } else {
+            updateVehicle.disabled = true;
+            deleteVehicle.disabled = true;
+            newButton.disabled = false;
+        }
+    };
+</script>
